--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "TT Norms Pro";
+  src: url("fonts/TTNormsPro-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 body {
   font-family: "TT Norms Pro", sans-serif;
   display: flex;
